Better exception handling in application.