@@ -11,33 +11,34 @@
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
         <maven.compiler.target>24</maven.compiler.target>
+        <openjfx.version>24.0.1</openjfx.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>24</version>
+            <version>${openjfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>24</version>
+            <version>${openjfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>24</version>
+            <version>${openjfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-media</artifactId>
-            <version>24</version>
+            <version>${openjfx.version}</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-swing</artifactId>
-            <version>24</version>
+            <version>${openjfx.version}</version>
         </dependency>
     </dependencies>
 
@@ -69,6 +70,10 @@
                         <jlinkImageName>jkaraoke</jlinkImageName>
                         <jlinkZipName>jkaraoke</jlinkZipName>
                         <mainClass>karaoke.Main</mainClass>
+                        <options>
+                            <option>--enable-native-access=javafx.graphics</option>
+                            <option>--enable-native-access=javafx.media</option>
+                        </options>
                     </configuration>
                 </plugin>
             </plugins>
